--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>John Cao | About</title>
     <link
       rel="stylesheet"
@@ -16,21 +18,21 @@
   </head>
   <body>
     <nav class="navbar">
-        <div class="logo-title">
-            <h1>John Cao</h1>
-        </div>
-        <input type="checkbox" id="nav-toggle" class="nav-toggle" />
-        <label for="nav-toggle" class="nav-toggle-label">
-          <span></span>
-        </label>
-        <div class="nav-links">
-            <ul>
-                <li><a href="#">About</a></li>
-                <li><a href="experience.html">Experience</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-        </div>
+      <div class="logo-title">
+        <h1>John Cao</h1>
+      </div>
+      <input type="checkbox" id="nav-toggle" class="nav-toggle" />
+      <label for="nav-toggle" class="nav-toggle-label">
+        <span></span>
+      </label>
+      <div class="nav-links">
+        <ul>
+          <li><a href="#">About</a></li>
+          <li><a href="experience.html">Experience</a></li>
+          <li><a href="projects.html">Projects</a></li>
+          <li><a href="#">Contact</a></li>
+        </ul>
+      </div>
     </nav>
     <div class="d-flex align-items-center jumbotron">
       <div class="about container">
